fix: grant service principal access to secret

--- a/setup/08_create_databricks_objects.ipynb
+++ b/setup/08_create_databricks_objects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7a79c4cf",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "    ScopeBackendType, AzureKeyVaultSecretScopeMetadata\n",
     ")\n",
     "from databricks.sdk.service.settings import TokenAccessControlRequest, TokenPermissionLevel\n",
-    "\n",
+    "from databricks.sdk.service.workspace import AclPermission\n",
     "import yaml\n",
     "\n",
     "with open(\"../config.yml\") as f:\n",
@@ -164,7 +164,8 @@
     "            dns_name=KV_DNS_NAME\n",
     "        )\n",
     "    )\n",
-    "    print(f\"Created AKV-backed scope '{SCOPE_NAME}'.\")"
+    "    print(f\"Created AKV-backed scope '{SCOPE_NAME}'.\")\n",
+    "\n"
    ]
   },
   {
@@ -189,7 +190,9 @@
     "            add=[c.Privilege.USE_CATALOG, c.Privilege.CREATE_SCHEMA]\n",
     "        ),\n",
     "    ],\n",
-    ")"
+    ")\n",
+    "\n",
+    "w.secrets.put_acl(scope=SCOPE_NAME,permission=AclPermission.READ, principal=sp.application_id)"
    ]
   },
   {
